# breathe-cli

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
npm/: .npmignore  README.md  install.js  package.json
src/: animation.rs  app.rs  audio.rs  main.rs  particles.rs  techniques.rs  theme.rs
src/ui/: breath_visualizer.rs  breathing_circle.rs  celebration.rs  mod.rs  overlays.rs  widgets.rs
