[package]
name = "breathe"
version = "0.1.0"
edition = "2021"
description = "Military-grade breathing techniques in your terminal"
license = "MIT"
repository = "https://github.com/AtomicIntuition/breathe-cli"
keywords = ["cli", "breathing", "meditation", "wellness", "terminal"]
categories = ["command-line-utilities"]
authors = ["Atomic Intuition"]

[dependencies]
# TUI framework
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Async runtime
tokio = { version = "1.43", features = ["full"] }
futures = "0.3"

# CLI argument parsing
clap = { version = "4.5", features = ["derive", "color", "suggestions"] }

# Time handling
chrono = "0.4"

# Config and data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Audio
rodio = "0.20"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
